fix expand collapse button style

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -15,6 +15,6 @@ footer a:hover {
   color: #99ccff;
 }
 
-.btn-toolbar {
+.button-small {
   font-size: 0.8rem;
 }
